fix bugs: 1. allow to import problems from not well formatted xml files 2. do not display bottom scrollbar for selectpicker

--- a/public/include/css/common.css
+++ b/public/include/css/common.css
@@ -1,6 +1,10 @@
 body {
 } 
 
+[id*="bs-select-"] {
+  overflow-x: hidden;
+}
+
 .table th{
   white-space: nowrap;
 }
